--- a/src/components/home/_church.scss
+++ b/src/components/home/_church.scss
@@ -8,12 +8,16 @@ $church-manage-background-height: 100vh;
       font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
       padding-top: 45vh;
       font-size: 320%;
+      @media screen and (max-width: 770px){
+        font-size: 240%;
+      }
       em {
         font-style: normal;
         font-size: 100%;
         font-weight: 300;
       }
       strong {
+        display: inline-block;
         font-weight: 700;
       }
     }
