--- a/src/components/home/_features.scss
+++ b/src/components/home/_features.scss
@@ -22,8 +22,8 @@ $security_color: #000000;
     animation: fadeInUp 2s;
   }
   .explore-more {
-    padding-top: 10vh;
-    padding-bottom: 10%;
+    padding-top: 150px;
+    padding-bottom: 200px;
     .explore-more-btn {
       font-feature-settings: "liga" 0;
       font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
