--- a/src/components/home/_pricing.scss
+++ b/src/components/home/_pricing.scss
@@ -6,12 +6,16 @@ $color-red-hover: #960221;
     font-feature-settings: "liga" 0;
     font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
-  padding: 50px;
+  padding: 30px;
   .only-pay {
     position: absolute;
     bottom: 0;
     @media screen and (min-width: 1250px) {
       margin-bottom: 50px;
+      font-weight: 700;
+      h2 {
+        font-weight: 700;
+      }
     }
     @media screen and (max-width: 380px) {
       h2 {
@@ -35,12 +39,13 @@ $color-red-hover: #960221;
       margin-bottom: 20px;
     }
     span {
+      display: inline-block;
       background-color: rgba(50,58,70,.5);
-      font-weight: 500;
-      display: inline;
+      font-weight: 700;
       border-radius: 25px;
       padding: 3px 15px;
       color: #fff;
+      font-size: 110%;
     }
     p {
       font-size: 90%;
@@ -67,6 +72,7 @@ $color-red-hover: #960221;
       small {
         margin-top: 20px;
         opacity: 0.9;
+        font-size: 70%;
       }
     }
     .pricing-range-slider {
@@ -89,17 +95,17 @@ $color-red-hover: #960221;
       height: 600px;
     }
     @media screen and (max-width: 768px){
-      padding-bottom: 50px;
-      padding-top: 50px;
+      padding-bottom: 40px;
+      padding-top: 40px;
     }
     @media screen and (min-width: 768px) {
       max-width: 650px;
-      padding-bottom: 50px;
-      padding-top: 50px;
+      padding-bottom: 40px;
+      padding-top: 40px;
     }
     @media screen and (min-width: 992px) {
       height: 460px;
-      margin: 50px 100px 50px 0;
+      margin: 40px 100px 40px 0;
     }
   }
 
