--- a/src/components/home/_testimonials.scss
+++ b/src/components/home/_testimonials.scss
@@ -2,7 +2,7 @@
   h3 {
     font-feature-settings: "liga" 0;
     font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding-top: 5%;
+    padding-top: 14vh;
   }
   .slick-dots li button:before {
     color: rgba(#ffffff ,0.5);
